# class

proejct 4/Project4_starter_files/: Project4.cpp  main.cpp
project0/probA/: a.out  print_squares_starter.cpp
project0/probB/: a.out  anagrams_starter.cpp
project0/probD/: a.out  exercise0d_starter.c
project0/probF/: a.out  gcd.c
project1/Project1_starter_files/: Project1.cpp  main.cpp  spel  spell  test  ylee7
project2/Project2_starter_files/: CMakeLists.txt  Makefile  Project2.cpp  main.cpp  test
project3/: .Project3.d  .main.d  CMakeLists.txt  Project3.cpp  main.cpp  test
project4/Project4_starter_files/: CMakeLists.txt  Project4.cpp
