cmake_minimum_required(VERSION 3.9)
project(Project4_starter_files_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(Project4_starter_files_2
        GRADE_REPORT.txt
        header.c
        header.txt
        Invent.h
        main.cpp
        MyString.cpp
        MyString.h
        Project4.cpp
        cmake-build-debug/test1.txt
        cmake-build-debug/test2.txt
        cmake-build-debug/test3.txt)
